# CheckFiltering

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  check.py  list  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/workflows/: check.yml  codeql-analysis.yml  gitguardian.yml  release.yml
check_filter/: __init__.py  check.py  cli.py  utils.py
tests/: __init__.py  conftest.py  test_check.py  test_cli.py  test_project.py  test_utils.py
