[tool.poetry]
authors = ["Arash Hatami <hatamiarash7@gmail.com>"]
classifiers = [
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
]
description = "Check URLs that filtered ( or not ) in Iran."
homepage = "https://arash-hatami.ir"
keywords = ["internet", "censorship", "filtering"]
license = "MIT"
name = "check-filter"
packages = [{include = "check_filter"}]
readme = "README.md"
repository = "https://github.com/hatamiarash7/CheckFiltering"
version = "2.3.3"

[tool.poetry.dependencies]
dnspython = "^2.4.0"
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
validators = ">=0.21,<0.23"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"

[tool.poetry.scripts]
check-filter = "check_filter.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hatamiarash7/CheckFiltering/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
